corrected the contact us spacing

--- a/css/layout.css
+++ b/css/layout.css
@@ -523,7 +523,6 @@ ul#nav li.current a { color: #F06000; }
    background: #191919;
    padding-top: 96px;
    padding-bottom: 80px;
-   padding-left: 200px;
    color:  rgb(187, 189, 190);
 }
 #contact .section-head { margin-bottom: 42px; }
